--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,8 @@ jobs:
             - name: Deploy 🚀
               uses: JamesIves/github-pages-deploy-action@v4
               with:
-                  branch: gh-pages
+                  repository-name: CubeSugarCheese/cubesugarcheese.github.io
+                  branch: main
                   folder: public
                   clean: true
                   single-commit: true
